[gd_scene load_steps=6 format=3 uid="uid://ddo6f6u0ng535"]

[ext_resource type="Script" path="res://src/day_4/day_4_part_2.gd" id="1_j3hv7"]
[ext_resource type="Theme" uid="uid://dwcsl72g2ktdp" path="res://src/monocraft_theme.tres" id="2_7hueo"]
[ext_resource type="Texture2D" uid="uid://d4rymhlalrwg" path="res://src/day_4/token.png" id="2_xflld"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_duv66"]
texture = ExtResource("2_xflld")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_y6cda"]
tile_size = Vector2i(48, 48)
sources/1 = SubResource("TileSetAtlasSource_duv66")

[node name="Day4Part2" type="Node2D"]
script = ExtResource("1_j3hv7")

[node name="Board" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Board"]
tile_set = SubResource("TileSet_y6cda")
rendering_quadrant_size = 128
format = 2

[node name="CardNumbers" type="HBoxContainer" parent="Board"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_7hueo")
theme_override_constants/separation = 0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="UseTestInput" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "test_input.txt"

[node name="UseRealInput" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "input.txt"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="StepButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Step
"

[node name="PlayButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Play"

[node name="CardCount" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/UseTestInput" to="." method="set_up_from_path" binds= ["res://src/day_4/test_input.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/UseRealInput" to="." method="set_up_from_path" binds= ["res://src/day_4/input.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/StepButton" to="." method="step"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/PlayButton" to="." method="_on_play_pressed"]
